plugins {
    id 'java-library'
    id 'maven-publish'
    id "com.diffplug.spotless" version "8.4.0"
    id "me.qoomon.git-versioning" version "6.4.4"
    id "org.jreleaser" version "1.23.0"
}

group = "io.consensys.protocols"

version = "UNKNOWN"

gitVersioning.apply {
    refs {
        tag(".+") {
            version = "\${ref}"
        }
        branch("main") {
            version = "develop"
        }
        branch(".+") {
            version = "\${ref}"
        }
    }
    rev {
        version = "UNKNOWN"
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'com.google.auto.service:auto-service-annotations:1.0'
    annotationProcessor 'com.google.auto.service:auto-service:1.0'
    implementation 'com.google.errorprone:error_prone_check_api:2.36.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation 'com.google.errorprone:error_prone_test_helpers:2.36.0'
    testRuntimeOnly 'info.picocli:picocli:4.6.1'
    testRuntimeOnly 'org.apache.logging.log4j:log4j-api:2.17.1'
    testRuntimeOnly 'it.unimi.dsi:fastutil:8.5.6'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withJavadocJar()
    withSourcesJar()
}

spotless {
    java {
        removeUnusedImports()
        googleJavaFormat()
        importOrder 'tech.pegasys', 'java', ''
        trimTrailingWhitespace()
        endWithNewline()
        licenseHeaderFile "${rootDir}/gradle/spotless.java.license"
    }
}

def compilerExports = [
    '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
    '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
    '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
]

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += compilerExports
}

tasks.named('javadoc') {
    options.addMultilineStringsOption('-add-exports').value = [
        'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
    ]
}

tasks.named('test') {
    // Use junit platform (aka JUnit 5) for unit tests.
    useJUnitPlatform()
    testLogging.showStandardStreams = true
    jvmArgs += [
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
    ]
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom {
                name = "${project.name}"
                description = 'A collection of custom error prone checks'
                url = 'https://github.com/Consensys/errorprone-checks'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = "consensys"
                        name = "Protocols Team"
                        email = "devops@consensys.net"
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/Consensys/errorprone-checks.git'
                    developerConnection = 'scm:git:ssh://github.com/Consensys/errorprone-checks.git'
                    url = 'https://github.com/Consensys/errorprone-checks'
                }
            }
        }
    }
    repositories {
        maven {
            url = layout.buildDirectory.dir("staging-deploy")
        }
    }
}

jreleaser {
    release {
        github {
            // Creating and tagging a release is done manually
            skipRelease = true
            skipTag = true
            // injecting a fake value to make JReleaser happy
            token = "foobar"
        }
    }
    signing {
        active = 'ALWAYS'
        armored = true
    }
    deploy {
        maven {
            mavenCentral {
                sonatype {
                    active = 'ALWAYS'
                    url = 'https://central.sonatype.com/api/v1/publisher'
                    stagingRepository('build/staging-deploy')
                    retryDelay = 15
                    maxRetries = 100
                }
            }
        }
    }
}
